refactor: reestruturação do endpoint de criação de evidências (imagem/texto)
